# cxx_base

./: .gitignore  CMakeLists.txt  README.md
algocres/: CMakeLists.txt
algocres/include/algocres/: array_stack.hxx  stackable.hxx  util.hxx
algocres/src/: holder.cxx
algocres/test/: stack_tests.cxx
cmake/: gtest.txt.in
